<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_agenda">

    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.e1t3.onplan.ui.home.HomeFragment"
        android:label="@string/menu_agenda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_salas"
        android:name="com.e1t3.onplan.ui.gelak.GelakFragment"
        android:label="@string/menu_salas"
        tools:layout="@layout/fragment_salas" />

    <fragment
        android:id="@+id/nav_kontaktua"
        android:name="com.e1t3.onplan.ui.kontaktua.KontaktuaFragment"
        android:label="@string/menu_kontaktua"
        tools:layout="@layout/fragment_kontaktua" />
</navigation>