<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/mainColor"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/app_icon_invertido_foreground" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/mainColorDarker"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_user_email"
        android:textColor="@color/mainColorDarker" />

    <Button
        android:id="@+id/btnEditarUsuario"
        style="@style/Button.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColorLight"
        android:text="@string/btnEditarUsuario"
        android:textColor="@color/mainColorDarker" />

    <Button
        android:id="@+id/btnCerrarSesion"
        style="@style/Button.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColorLight"
        android:text="@string/btnCerrarSesion"
        android:textColor="@color/mainColorDarker"/>

</LinearLayout>