<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EkitaldiInprimakia">

    <EditText
        android:id="@+id/etNombreEvento"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_del_evento"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/tvDiaHoraIni"
        android:layout_width="188dp"
        android:layout_height="23dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="209dp"
        android:text="@string/dia_y_hora_de_inicio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreEvento"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etFechaInicio"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha_inicio"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etHoraInicio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaHoraIni"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/etHoraInicio"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hora_inicio"
        android:inputType="time"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaHoraIni"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/etFechaFin"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha_final"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etHoraFin"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaHoraFin"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/etHoraFin"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hora_fin"
        android:inputType="time"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiaHoraFin"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/tvDiaHoraFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="293dp"
        android:text="@string/dia_y_hora_de_fin"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFechaInicio"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/tvAforo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/aforo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPresupuesto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFechaFin"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/etAforo"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/etAforo"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etPresupuesto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAforo"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/etPresupuesto"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/etPresupuesto"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPresupuesto"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/tvPresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="110dp"
        android:text="@string/presupuesto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHoraFin"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/tvGertaeraDeskribapena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="339dp"
        android:text="@string/descripcion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAforo"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/etDeskribapena"
        android:layout_width="376dp"
        android:layout_height="150dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="50"
        android:gravity="start|top"
        android:hint="@string/etDescripcion"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="6"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGertaeraDeskribapena"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/btnVolverAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="290dp"
        android:text="@string/btnVolverAgenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeskribapena"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="269dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeskribapena"
        app:layout_constraintVertical_bias="0.463" />

</androidx.constraintlayout.widget.ConstraintLayout>